# ISeeNN

./: README.md  mongodb_first_run.sh
CBIR/CBIR/: manage.py
CBIR/CBIR/CBIR/: asgi.py  settings.py  urls.py  wsgi.py
CBIR/CBIR/search_web/: views.py
CBIR/CBIR/search_web/feature_extractor/: extractor.py
CBIR/CBIR/search_web/static/search_web/css/: detail.css  index.css  result_arrange.css
CBIR/CBIR/search_web/templates/search_web/: detail.html  index.html  result.html
CBIR/Indexer/: feature_extractor.py  indexer.py
CBIR/search_engine/: CMakeLists.txt  build.sh
